mlflow-namespace.yaml
# -----------------------------
# Namespace
# -----------------------------
apiVersion: v1
kind: Namespace
metadata:
  name: mlflow
