mlflow-deployment.yaml
# -----------------------------
# MLflow Deployment
# -----------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow
  namespace: mlflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      containers:
        - name: mlflow
          image: cdjs/mlflow-oidc:dev
          imagePullPolicy: Always
          args:
            - "mlflow"
            - "server"
            - "--app-name"
            - "oidc-auth"
            - "--host"
            - "0.0.0.0"
            - "--port"
            - "5000"
            - "--artifacts-destination"
            - "s3://drai-mlflow-test"
            - "--serve-artifacts"
            - "--disable-security-middleware"
          ports:
            - containerPort: 5000
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "2"
              memory: "2Gi"

---
# -----------------------------
# ClusterIP Service
# -----------------------------
apiVersion: v1
kind: Service
metadata:
  name: mlflow
  namespace: mlflow
spec:
  selector:
    app: mlflow
  ports:
    - name: http
      port: 5000
      targetPort: 5000
  type: ClusterIP
